--- a/scss/utils/_colors.scss
+++ b/scss/utils/_colors.scss
@@ -1,10 +1,7 @@
-$c-white: #fff;
-$c-black: #000;
-
-$c-title: #bbbbbb;
-$c-placeholder: rgb(75, 75, 75);
+$c-title: #d2d2d2;
+$c-body: #e6e6e6;
+$c-placeholder: rgb(110, 110, 110);
 
 $c-dark: #191813;
 $c-faint: #c9c7b8;
-$c-beige: #b5b3a4;
 $c-tan: #444;
